[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karrio_freightcom_rest"
version = "2025.8"
description = "Karrio - Freightcom Rest Shipping Extension"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "karrio", email = "hello@karrio.io"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "karrio",
]

[project.urls]
Homepage = "https://github.com/karrioapi/karrio"

[project.entry-points."karrio.plugins"]
freightcom_rest = "karrio.plugins.freightcom_rest"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
exclude = ["tests.*", "tests"]
namespaces = true